Bug#12920 - key_read_requests counter appears to re-set Enlarged the counter variables to ulonglong.